Fix shadow distribution and build task conflicts
Fix shadow distribution and build task conflicts